--- a/templates/app1/plreport2.html
+++ b/templates/app1/plreport2.html
@@ -89,7 +89,7 @@
 
     <div class="card radius-15">
         <div class="card-body">
-            <form action="{% url 'purchase_acctransactions1'%}" method="post" class="needs-validation" novalidate>
+            <form action="" method="post" class="needs-validation" novalidate>
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-sm-4">
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-md-3" >
                         <button class="btn btn-outline-info" onclick="printDiv()">Print</button>
-                        <button class="btn btn-outline-info" onclick="ExportToExcel('xlsx')">Export to excel</button>
+                        <!-- <button class="btn btn-outline-info" onclick="ExportToExcel('xlsx')">Export to excel</button> -->
                     </div>
                 </div>
             </form>
