--- a/templates/app1/stocksummary.html
+++ b/templates/app1/stocksummary.html
@@ -36,7 +36,7 @@
                                     name="reportperiod" type="text">
                                 <option><span class="bx bx-right-arrow-alt"></span>All dates</option>
                                 <option><span class="bx bx-right-arrow-alt"></span>Custom</option>
-                                <option><span class="bx bx-right-arrow-alt"></span>Today</option>
+                                <!-- <option><span class="bx bx-right-arrow-alt"></span>Today</option> -->
                                 <option><span class="bx bx-right-arrow-alt"></span>This month</option>
                                 <option><span class="bx bx-right-arrow-alt"></span>This financial year</option>
                             </select>
