--- a/templates/app1/stockvaluation.html
+++ b/templates/app1/stockvaluation.html
@@ -37,7 +37,7 @@
                                 <option><span class="bx bx-right-arrow-alt"></span>All dates</option>
                                 <option><span class="bx bx-right-arrow-alt"></span>Custom</option>
                                 <option><span class="bx bx-right-arrow-alt"></span>Today</option>
-                                <option><span class="bx bx-right-arrow-alt"></span>This month</option>
+                                <!-- <option><span class="bx bx-right-arrow-alt"></span>This month</option> -->
                                 <option><span class="bx bx-right-arrow-alt"></span>This financial year</option>
                             </select>
                         </div>
